--- a/src/main/resources/static/appPasteur/modules/core/app.html
+++ b/src/main/resources/static/appPasteur/modules/core/app.html
@@ -1,4 +1,5 @@
 <div ng-init="prepareAction()"></div>
+<div class="custom-overray" ng-show="app.globalDisable"></div>
 <!--
   Main sidebar seen on the left. may be static or collapsing depending on selected state.
 
