--- a/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
+++ b/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
@@ -65,7 +65,7 @@
 					<i class="toggle fa fa-angle-down"></i>
 				</a>
 				<ul id="sidebar-menu5" class="collapse">
-					<li><a data-ui-sref="app.fire-alarm">알람이력 설정</a></li>
+					<!-- <li><a data-ui-sref="app.fire-alarm">알람이력 설정</a></li> -->
 					<li><a data-ui-sref="app.fire-history">알람이력 보기</a></li>
 				</ul>
 			</li>
