--- a/src/main/resources/static/appPasteur/modules/energy/hvac/alarm-history/alarm-history.html
+++ b/src/main/resources/static/appPasteur/modules/energy/hvac/alarm-history/alarm-history.html
@@ -92,6 +92,25 @@
 			</table>			
 			</div>
 			
+			<div class="margin_top_30" ng-show="dataList.length == 0">
+			<table
+				class="table table-hover table-lg mt-lg mb-0">
+				<thead>
+					<tr>
+					<tr>
+						<th class="text-center">변경 시간</th>
+						<th class="text-center">태그 값</th>
+						<th class="text-center">알람 내역</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td class="text-center" colspan="3">해당 데이터가 없습니다.</td>
+					</tr>
+				</tbody>
+			</table>
+			</div>
+			
 		</div>
 	</section>
 </div>
