--- a/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-edit.html
+++ b/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-edit.html
@@ -12,11 +12,25 @@
 							<span class="label label-default text-white mr-xs"> 기본 정보 </span> 기본 정보를 입력해 주세요.
 						</legend>
 						<div class="form-group">
-							<label class="control-label col-sm-3" for="subject"><strong>제목</strong></label>
+							<label class="control-label col-sm-3" for="subject"><strong>그래프 제목</strong></label>
 							<div class="col-sm-9">
 								<input type="text" id="subject" name="subject" class="form-control"
 									ng-model="currentData.subject">
 								<ul ng-show="subject_error" class="parsley-errors-list filled" id="parsley-id-4"><li class="parsley-required">필수 입력사항입니다.</li></ul>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3" for="tagIDs"><strong>관제점</strong></label>
+							<div class="col-sm-9">
+								<select multiple class="select2 form-control" id="tagIDs" ng-model="currentData.tagIDs"
+									data-ui-jq="select2" 
+									data-ui-options="{minimumResultsForSearch: 5, maximumSelectionSize:3}"
+									data-placeholder="관제점을 선택하세요." 
+									data-minimum-results-for-search="5"
+									tabindex="-1">
+									<option ng-repeat="point in dataList" value="{{point.name}}:{{point.tagID}}">{{point.name}}</option>
+								</select>
+								<ul ng-show="tagIDs_error" class="parsley-errors-list filled" id="parsley-id-multiple-tagIDs"><li class="parsley-required">필수 입력사항입니다.</li></ul>
 							</div>
 						</div>
 						<div class="form-group">
@@ -98,26 +112,14 @@
 								</div>
 							</div>
 						</div>
-						<div class="form-group">
-							<label class="control-label col-sm-3" for="tagIDs"><strong>관제점</strong></label>
-							<div class="col-sm-9">
-								<select multiple class="select2 form-control" id="tagIDs" ng-model="currentData.tagIDs"
-									data-ui-jq="select2" 
-									data-ui-options="{minimumResultsForSearch: 5, maximumSelectionSize:3}"
-									data-placeholder="관제점을 선택하세요." 
-									data-minimum-results-for-search="5"
-									tabindex="-1">
-									<option ng-repeat="point in dataList" value="{{point.name}}:{{point.tagID}}">{{point.name}}</option>
-								</select>
-								<ul ng-show="tagIDs_error" class="parsley-errors-list filled" id="parsley-id-multiple-tagIDs"><li class="parsley-required">필수 입력사항입니다.</li></ul>
-							</div>
-						</div>
+						<!-- 
 						<div class="form-group col-sm-12">
 							<label class="control-label col-sm-3"><span class="btn btn-default btn-rounded pull-right" ng-click="previewAction()">Preview</span></label>
 							<div class="col-sm-9">
 								<nvd3 style="width:100%" ng-show="chartEnable" options="chartOptions" data="chartData" config="{refreshDataOnly: false}" api="api" objectequality="true"></nvd3>
 							</div>
 						</div>
+						 -->
 					</fieldset>
 					
 					<!-- 
