--- a/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-list.html
@@ -22,7 +22,7 @@
                 </span>
 				</div>
 				<div class="pull-right">								
-					<span class="btn btn-primary btn-rounded" ng-click="editAction()">NEW</span>
+					<span class="btn btn-primary btn-rounded" ng-click="editAction(null)">NEW</span>
 				</div>
 			</div>
 			</form>
@@ -38,7 +38,7 @@
 						<th class="hidden-xs text-center">인터벌 기준</th>
 						<th class="hidden-xs text-center">날짜 기준</th>
 						<th class="hidden-xs text-center">Value 옵션</th>
-						<th class="hidden-xs text-center">삭제</th>
+						<th class="hidden-xs text-center">편집</th>
 					</tr>
 
 				</thead>
@@ -51,8 +51,12 @@
 						<td class="text-center">{{getPointNames(point.tagIDs)}}</td>
 						<td class="text-center">{{point.interval}}</td>
 						<td class="hidden-xs text-center">{{getPointDate(point.dateType, point.dateTime)}}</td>
-						<td class="hidden-xs text-center">{{point.valueType}}</td>							
+						<td class="hidden-xs text-center">{{point.valueType}}</td>			
 						<td class="hidden-xs text-center">
+								<button
+									class="btn btn-xs btn-primary"
+									ng-click="editAction(point)">
+									수정</button>
    								 <button
 									class="btn btn-xs btn-primary"
 									mwl-confirm
@@ -61,12 +65,13 @@
 									confirm-text="예"
 									cancel-text="아니오"
 									placement="top"
-									on-confirm="deleteAction(point.no)"
+									on-confirm="resetXdRequest(point.tagIDs,'deleteAction', point.no)"
 									on-cancel=""
 									confirm-button-type="primary"
 									cancel-button-type="inverse">
 									Delete
 								</button>
+						<!-- <code>{{point.tagIDs}}</code> -->
 						</td>
 						
 					</tr>
@@ -83,6 +88,28 @@
 			<div class="clearfix text-center" ng-show="paginationDisplay">
 				<dir-pagination-controls on-page-change="pageChangeHandler(newPageNumber)"></dir-pagination-controls>
 			</div>
+			
+			<table
+				class="table table-hover table-lg mt-lg mb-0 margin_top_30" ng-show="graphList.length==0">
+				<thead>
+					<tr>
+					<tr>
+						<th class="text-center">SEQ</th>
+						<th class="text-center">그래프 제목</th>
+						<th class="text-center">관제점</th>
+						<th class="hidden-xs text-center">인터벌 기준</th>
+						<th class="hidden-xs text-center">날짜 기준</th>
+						<th class="hidden-xs text-center">Value 옵션</th>
+						<th class="hidden-xs text-center">편집</th>
+					</tr>
+
+				</thead>
+				<tbody>
+					<tr>
+						<td class="text-center" colspan="7">해당 데이터가 없습니다.</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	</section>
 </div>
