--- a/src/main/resources/static/appPasteur/modules/others/elevator/alarm-manage/alarm-manage-edit.html
+++ b/src/main/resources/static/appPasteur/modules/others/elevator/alarm-manage/alarm-manage-edit.html
@@ -56,7 +56,7 @@
 										<label for="condition2">특정값</label>
 									</div>
 									<div ng-show="currentData.condition_type == 'condition2'" class="pull-left margin_left_10">
-										<span class="pull-left fw-bold padding_top_5" style="height: 34px;"> [X] = &nbsp;</span> 
+										<span class="pull-left fw-bold padding_top_5" style="height: 34px;"> [X] == &nbsp;</span> 
 										<input type="text" id="condition2" name="condition2" 
 										class="form-control pull-left"
 										style="width : 150px" 
