--- a/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
+++ b/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
@@ -57,7 +57,7 @@
 					<ul ng-show="searchDate2_error" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항입니다.</li></ul>
 				</div>
 				<div class="pull-left margin_left_10">
-					<button type="submit" class="btn btn-danger btn-rounded">Search</button>
+					<button type="submit" class="btn btn-default">Search</button>
 				</div>
 			</div>
 			</form>
