--- a/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
+++ b/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
@@ -91,7 +91,7 @@
 				<ul id="sidebar-menu7" class="collapse">
 					<li><a data-ui-sref="app.ev-point-manage">관제점보기</a></li>
 					<li><a data-ui-sref="app.ev-monitor">상태감시</a></li>
-					<li><a data-ui-sref="app.ev-alarm">알람이력 설정</a></li>
+					<!-- <li><a data-ui-sref="app.ev-alarm">알람이력 설정</a></li> -->
 					<li><a data-ui-sref="app.ev-history">알람이력 보기</a></li>
 				</ul>
 			</li>
