--- a/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
+++ b/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
@@ -61,7 +61,11 @@
 				</div>
 			</div>
 			</form>
-			
+			<!-- 
+			<div class="pull-left margin_left_10">
+					<button type="button" class="btn btn-default" ng-click="alarmCheck(-1)">alarmCheck</button>
+				</div>
+			 -->
 			<!-- 
 			<code>searchNo : {{searchNo}}</code>
 			<code>searchName : {{searchName}}</code>
