--- a/src/main/resources/static/appPasteur/modules/energy/electric/graph-manage/graph-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/electric/graph-manage/graph-manage-list.html
@@ -56,7 +56,7 @@
 								<button
 									class="btn btn-xs btn-primary"
 									ng-click="editAction(point)">
-									수정</button>
+									Edit</button>
    								 <button
 									class="btn btn-xs btn-primary"
 									mwl-confirm
