--- a/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-edit.html
+++ b/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-edit.html
@@ -99,6 +99,10 @@
 							<label class="control-label col-sm-3" for="valueType"> <strong>Value 옵션</strong></label>
 							<div class="col-sm-9">
 								<div class="radio pull-left">
+									<input type="radio" name="valueType" id="valueType0" ng-model="currentData.valueType" value="LAST"> <label
+										for="valueType0">Last</label>
+								</div>
+								<div class="radio pull-left margin_left_30">
 									<input type="radio" name="valueType" id="valueType1" ng-model="currentData.valueType" value="MIN"> <label
 										for="valueType1">Min</label>
 								</div>
