--- a/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
+++ b/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
@@ -12,6 +12,14 @@
 				</a>
 			</li>
 		</ul>
+		
+		<ul class="sidebar-nav">
+			<li>
+				<a data-ui-sref="app.components-reset"> 
+					<span class="icon"> <i class="glyphicon glyphicon-pencil"></i></span> 관제점 리셋
+				</a>
+			</li>
+		</ul>
 	    
 		<h5 class="sidebar-nav-title">Energy</h5>
 		<ul class="sidebar-nav">
