--- a/src/main/resources/static/appPasteur/modules/energy/electric/alarm-manage/alarm-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/electric/alarm-manage/alarm-manage-list.html
@@ -60,7 +60,7 @@
 									confirm-text="예"
 									cancel-text="아니오"
 									placement="top"
-									on-confirm="resetXdRequest(point.tagID,'deleteAction', point.no)"
+									on-confirm="deleteAction(point.no)"
 									on-cancel=""
 									confirm-button-type="primary"
 									cancel-button-type="inverse">
