--- a/src/main/resources/static/index_appPasteur.html
+++ b/src/main/resources/static/index_appPasteur.html
@@ -224,7 +224,8 @@
 	<script type="text/javascript" src="appPasteur/modules/others/elevator/alarm-manage/alarm-manage.module.js"></script>
 	<script type="text/javascript" src="appPasteur/modules/others/elevator/alarm-manage/alarm-manage.js"></script>
 	
-
+	<script type="text/javascript" src="appPasteur/modules/components/reset/reset.module.js"></script>
+	<script type="text/javascript" src="appPasteur/modules/components/reset/reset.js"></script>
 	
 	
 	<script type="text/javascript" src="appPasteur/index.js"></script>	
