--- a/src/main/resources/static/appPasteur/modules/energy/electric/graph-manage/graph-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/electric/graph-manage/graph-manage-list.html
@@ -65,7 +65,7 @@
 									confirm-text="예"
 									cancel-text="아니오"
 									placement="top"
-									on-confirm="resetXdRequest(point.tagIDs,'deleteAction', point.no)"
+									on-confirm="deleteAction(point.no)"
 									on-cancel=""
 									confirm-button-type="primary"
 									cancel-button-type="inverse">
