--- a/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
+++ b/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
@@ -93,7 +93,7 @@
 						total-items="page.totalElements" current-page="pagination.current">						
 						<td class="text-center">{{point.datetime | date:'yyyy-MM-dd HH:mm:ss'}}</td>	
 						<td class="text-center">{{point.value}} </td>
-						<td class="text-center"><span class="label label-danger">{{point.alarmName}}</span></td>
+						<td class="text-center"><div ng-bind-html="point.alarmName"></div></td>
 					</tr>
 				</tbody>
 			</table>		
