--- a/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
+++ b/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
@@ -7,7 +7,7 @@
 	    
 		<ul class="sidebar-nav margin_top_50">
 			<li>
-				<a class="collapsed" href="http://192.168.245.2:8080/ibs/bems/energy/log" target="_blank"> 
+				<a data-ui-sref="app.energy-report"> 
 					<span class="icon"> <i class="glyphicon glyphicon-pencil"></i></span> 사용량일지
 				</a>
 			</li>
