--- a/src/main/resources/static/appPasteur/modules/energy/electric/graph-manage/graph-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/electric/graph-manage/graph-manage-list.html
@@ -27,6 +27,8 @@
 			</div>
 			</form>
 			
+			<span>총 {{page.totalElements}}개의 그래프 설정이 있습니다.</span>
+			
 			<table
 				class="table table-hover table-lg mt-lg mb-0 margin_top_30" ng-show="graphList.length>0">
 				<thead>
