--- a/src/main/resources/static/appPasteur/modules/energy/analysis/report/report.html
+++ b/src/main/resources/static/appPasteur/modules/energy/analysis/report/report.html
@@ -1,5 +1,35 @@
-<h1 class="page-title">사용량분석 <small>사용량일지</small></h1>
+<div ng-init="prepareAction()"></div>
+<span us-spinner="{radius:30, width:8, length: 16}" spinner-key="app-spinner" spinner-start-active="true"></span>
 
-<div class="widget-container">
-    <p>페이지 준비중 입니다.</p>
+<div class="row">
+<div class="col-md-12">
+	<section class="widget">
+		<div class="widget-body">
+		
+			<form name="searchDayForm"					
+					data-ui-jq="parsley" 
+					data-parsley-priority-enabled="ture"
+					ng-submit="searchDayFormSubmit(daily.$valid)">
+					
+			<div class="clearfix form-group">
+				<div class="pull-left">
+					<h5 class="fw-bold">날짜 선택</h5>
+				</div>
+				<div class="pull-left">
+					<div class="pull-left margin_left_10">	
+						<input class="custom_datetimepicker pull-left" data-ui-jq="datetimepicker"
+							data-ui-options="{viewMode: 'days', format: 'YYYY-MM-DD', useCurrent: false}" type="text" 
+							id="daily" name="daily" ng-model="daily"/>
+					</div>
+					<ul ng-show="daily_error = true" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항입니다.</li></ul>
+				</div>
+				<span class="input-group-btn pull-left">
+					<button type="submit" class="btn btn-default">선택</button>
+                </span>
+			</div>
+			</form>
+			
+		</div>
+	</section>
+</div>
 </div>
