--- a/src/main/resources/static/appPasteur/modules/others/elevator/point-manage/point-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/others/elevator/point-manage/point-manage-list.html
@@ -22,9 +22,10 @@
                  -->
 			</div>
 			</form>
-
+	
+			<span>총 {{filtered.length}}개의 관제점이 있습니다.</span>
 			<table
-				class="table table-hover table-lg mt-lg mb-0 margin_top_30">
+				class="table table-hover table-lg mt-lg mb-0">
 				<thead>
 					<tr>
 					<tr>
@@ -36,7 +37,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="point in dataList | filter:searchText | orderBy:sortAttr:sortOder">
+					<tr ng-repeat="point in filtered = (dataList | filter:searchText | orderBy:sortAttr:sortOder)">
 					<!-- <tr ng-repeat="point in dataList | filter:searchText"> -->
 						<td class="text-center">{{point.no}}</td>		
 						<td class="text-center">{{point.tagID}}</td>
