--- a/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-list.html
@@ -27,7 +27,9 @@
 			</div>
 			</form>
 			
-			<span>총 {{page.totalElements}}개의 그래프 설정이 있습니다.</span>
+			
+			<span ng-show="page.totalElements">총 {{page.totalElements}}개의 그래프 설정이 있습니다.</span>
+			<span ng-show="!page.totalElements">총 {{graphList.length}}개의 그래프 설정이 있습니다.</span>
 			
 			<table
 				class="table table-hover table-lg mt-lg mb-0 margin_top_30" ng-show="graphList.length>0">
